misc: minor typo fix in config

--- a/misc/etmain/etl_server.cfg
+++ b/misc/etmain/etl_server.cfg
@@ -12,7 +12,7 @@
 
 // LOGGING & PROTECTION
 
-set logfile "2"                                 // enables console logging - 'etconsole.log' (1: enabled 2: enabled and synchronized)
+set logfile "2"                                 // enable console logging - 'etconsole.log' (1: enabled 2: enabled and synchronized)
 set sv_protect "1"                              // getstatus response limit protection
 set sv_protectLog "sv_protect.log"              // when set all sv_protect and server security related messages are written into this log file
 set sv_floodProtect "1"                         // prevent server flooding
@@ -21,7 +21,7 @@ set sv_pure "1"                                 // enable hash check of client p
 // NETWORK
 
 set dedicated "2"                               // 1: dedicated server for lan 2: dedicated server for internet
-set sv_advert "1"                               // send hartbeats to master server - important to set!
+set sv_advert "1"                               // send heartbeats to master server - important to set!
 //set net_ip ""                                 // set to override the default IPv4 ET uses
 //set net_port "27960"                          // set to override the default port ET uses
 //set net_ip6 ""                                // set to override the default IPv6 ET uses
@@ -67,14 +67,14 @@ set server_motd5 ""
 // MISC SETTINGS
 
 set g_heavyWeaponRestriction "100"              // heavy weapon restriction (% of team that have Heavy Weapons)
-set g_antilag "1"                               // enable anti-lag
+set g_antilag "1"                               // enable antilag
 set g_altStopwatchMode "0"                      // enable ABAB stopwatch team format
-set g_autofireteams "1"                         // Automaticaly put team players into FireTeams
+set g_autofireteams "1"                         // automatically put team players into FireTeams
 set g_complaintlimit "6"                        // number of complaints needed to kick a player
 set g_disableComplaints "1"                     // disable complaints for airstrike, artillery, mortar and landmines team kills
 set g_ipcomplaintlimit "3"                      // number of different player complaints to kick a player
-set g_fastres "0"                               // toggles instantly active player after medic revive
-set g_friendlyFire "1"                          // toggles Firendly Fire
+set g_fastres "0"                               // toggle instantly active player after medic revive
+set g_friendlyFire "1"                          // toggle Friendly Fire
 set g_minGameClients "8"                        // minimum number of players needed to start a match
 set g_maxlives "0"                              // number of respawns a player has
 set g_alliedmaxlives "0"                        // number of lives available to the allied team
@@ -84,13 +84,13 @@ set g_noTeamSwitching "0"                       // disallow players from joining
 set g_voiceChatsAllowed "5"                     // number of VSays a player can say in 30 seconds
 set g_doWarmup "0"                              // players have a warm up period
 set g_warmup "10"                               // warm up time (in seconds)
-set g_spectatorInactivity "0"                   // duration of spectator inactivity before auto-cick
-set match_latejoin "1"                          // allow players to join a match that is already begun
+set g_spectatorInactivity "0"                   // duration of spectator inactivity before auto-kick
+set match_latejoin "1"                          // allow players to join a match that has already begun
 set match_minplayers "4"                        // minimum number of players needed to start a match
 set match_mutespecs "0"                         // mute spectators
-set match_readypercent "100"                    // % of players 'Ready' to start match
+set match_readypercent "100"                    // % of players "Ready" to start match
 set match_timeoutcount "0"                      // number of timeout allowed
-set match_warmupDamage "1"                      // toggles warmup damage (0: Off 1: Enemy Only 2: Everybody)
+set match_warmupDamage "1"                      // toggle warmup damage (0: Off 1: Enemy Only 2: Everybody)
 set team_maxplayers "0"                         // maximum number of players that can join each team
 set team_nocontrols "1"                         // disallow players from having team control
 set pmove_fixed "0"                             // frame rate independent physics
@@ -123,8 +123,8 @@ set vote_allow_swapteams "1"                    // allow team swapping by vote
 set vote_allow_friendlyfire "1"                 // allow friendly fire toggling by vote
 set vote_allow_timelimit "0"                    // allow map time limit changing by vote
 set vote_allow_warmupdamage "1"                 // allow warmup damage toggling by vote
-set vote_allow_antilag "1"                      // allow toggling Anti Lag setting by vote
-set vote_allow_balancedteams "1"                // allow toggling Balanced teams by vote
+set vote_allow_antilag "1"                      // allow toggling antilag setting by vote
+set vote_allow_balancedteams "1"                // allow toggling balanced teams by vote
 set vote_allow_muting "1"                       // allow player muting by vote
 set vote_allow_surrender "1"                    // allow surrender by vote
 set vote_allow_restartcampaign "1"              // allow restart campaign by vote
