--- a/misc/etmain/legacy.cfg
+++ b/misc/etmain/legacy.cfg
@@ -10,9 +10,9 @@
 
 // LOGGING & PROTECTION
 
-set g_log ""                                    // Enables game logging if set. Name of game logging file - logs weapon changes, kills, connects etc.
-set g_logSync "1"                               // Game logging options (0: buffered 1: synchronized)
-set g_protect "0"                               // Mod side security options
+set g_log ""                                    // enable game logging if set. Name of game logging file - logs weapon changes, kills, connects etc.
+set g_logSync "1"                               // game logging options (0: buffered 1: synchronized)
+set g_protect "0"                               // mod side security options
 
 // OPTIMIZATIONS
 
