--- a/etmain/preset_android_ui.cfg
+++ b/etmain/preset_android_ui.cfg
@@ -10,8 +10,8 @@ seta ui_r_ext_compressed_textures 1
 seta ui_r_ext_texture_filter_anisotropic 0
 seta ui_r_ext_multisample 0
 seta ui_r_dynamiclight 0
+seta ui_cg_shadows 0
 seta r_fastSky 0
-seta cg_shadows 0
 seta cg_brassTime 0
 seta ui_r_texturemode GL_LINEAR_MIPMAP_NEAREST
 seta ui_r_detailtextures 0
