--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,78 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Replace com.test.game with the identifier of your game below, e.g.
-     com.gamemaker.game
--->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.etlegacy.app"
+    android:installLocation="auto"
     android:versionCode="1"
-    android:versionName="1.0"
-    android:installLocation="auto">
-
+    android:versionName="1.0" >
     <!-- OpenGL ES 1.1 -->
-    <uses-feature android:glEsVersion="0x00010001" />
-    <!-- Touchscreen support -->
+    <uses-feature android:glEsVersion="0x00010001" /> <!-- Touchscreen support -->
     <uses-feature
         android:name="android.hardware.touchscreen"
-        android:required="false" />
-
-    <!-- Game controller support -->
+        android:required="false" /> <!-- Game controller support -->
     <uses-feature
         android:name="android.hardware.gamepad"
         android:required="false" />
-    
     <uses-feature
         android:name="android.hardware.usb.host"
-        android:required="false" />
-    
-    <!-- External mouse input events -->
+        android:required="false" /> <!-- External mouse input events -->
     <uses-feature
         android:name="android.hardware.type.pc"
-        android:required="false" />
-
-    <!-- Allow access to internet -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Allow writing to external storage and reading from it -->
+        android:required="false" /> <!-- Allow access to internet -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Allow writing to external storage and reading from it -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!-- Allow access to bluetooth -->
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <!-- Allow access to the vibrator -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Allow access to bluetooth -->
+    <uses-permission android:name="android.permission.BLUETOOTH" /> <!-- Allow access to the vibrator -->
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <!-- if you want to capture audio, uncomment this. -->
-    <!-- <uses-permission android:name="android.permission.RECORD_AUDIO" /> -->
-
-    <!-- Create a Java class extending SDLActivity and place it in a
-         directory under app/src/main/java matching the package, e.g. app/src/main/java/com/gamemaker/game/MyGame.java
-
-         then replace "SDLActivity" with the name of your class (e.g. "MyGame")
-         in the XML below.
-
-         An example Java class can be found in README-android.md
-    -->
-    <application android:label="@string/app_name"
-        android:icon="@mipmap/ic_launcher"
+    <application
         android:allowBackup="true"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-        android:hardwareAccelerated="true" >
-
-        <!-- Example of setting SDL hints from AndroidManifest.xml:
-        <meta-data android:name="SDL_ENV.SDL_ACCELEROMETER_AS_JOYSTICK" android:value="0"/>
-         -->
-
-        <activity android:name=".ETLActivity"
-            android:label="@string/app_name"
-            android:alwaysRetainTaskState="true"
-            android:screenOrientation="landscape"
-            android:launchMode="singleInstance"
-            android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
-            android:largeHeap="true"
-            >
+        android:hardwareAccelerated="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        <activity
+            android:name=".ETLMain"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
+        </activity>
+        <!--
+         Example of setting SDL hints from AndroidManifest.xml:
+        <meta-data android:name="SDL_ENV.SDL_ACCELEROMETER_AS_JOYSTICK" android:value="0"/>
+        -->
+        <activity
+            android:name=".ETLActivity"
+            android:alwaysRetainTaskState="true"
+            android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
+            android:hardwareAccelerated="true"
+            android:label="@string/app_name"
+            android:largeHeap="true"
+            android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
         </activity>
     </application>
 
