--- a/src/sys/win_resource.rc
+++ b/src/sys/win_resource.rc
@@ -108,14 +108,14 @@ BEGIN
 	BEGIN
 		BLOCK "040904b0"
 		BEGIN
-			VALUE "CompanyName", "Legacy Team"
+			VALUE "CompanyName", "ET: Legacy"
 			VALUE "FileDescription", "etl"
 			VALUE "FileVersion", PRODUCT_VERSIONSTR
 			VALUE "InternalName", "ET: Legacy"
-			VALUE "LegalCopyright", "2012-2020 ET: Legacy Team"
 			VALUE "OriginalFilename", "etl.exe"
 			VALUE "ProductName", "ET: Legacy"
 			VALUE "ProductVersion", PRODUCT_VERSIONSTR
+			VALUE "LegalCopyright", "2012-2020 ET: Legacy Team"
 		END
 	END
 	BLOCK "VarFileInfo"
