misc: fixed missing quotes in config, refs #305

--- a/etmain/configs/legacy3.config
+++ b/etmain/configs/legacy3.config
@@ -169,10 +169,10 @@ map default
 	setl g_useralliedrespawntime "0"
 	setl g_useraxisrespawntime "0"
 	setl g_moverScale "1.0"
-	setl team_maxMedics -1
-	setl team_maxEngineers -1
-	setl team_maxFieldops -1
-	setl team_maxCovertops -1
+	setl team_maxMedics "-1"
+	setl team_maxEngineers "-1"
+	setl team_maxFieldops "-1"
+	setl team_maxCovertops "-1"
 	command "sv_cvar r_drawfoliage EQ 1"
 }
 map fueldump
