misc: disabled renderer2 build by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ option(FEATURE_MULTIVIEW		"Enable multiview support (mod)"						ON)
 option(FEATURE_EDV				"Enable extended demo viewer support (mod)"				ON)
 option(FEATURE_ANTICHEAT		"Enable server side anti-wallhack code (server)"		ON)
 option(FEATURE_AUTOUPDATE		"Enable updater which downloads latest ET:L files"		ON)
-option(FEATURE_RENDERER2		"Build and use the new renderer"						ON)
+option(FEATURE_RENDERER2		"Build and use the new renderer"						OFF)
 option(FEATURE_RENDERER_GLES	"Build and use OpenGL ES renderer"						OFF)
 option(FEATURE_IPV6				"Enable IPv6 networking code"							ON)
 option(FEATURE_IRC_CLIENT		"Enable IRC client client side"							ON)
