Revert "xml: change preferred installLocation to external"
This reverts commit 563dd269e8a65d72f4024e8cfec6aa69a1eb715f.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.etlegacy.app"
-    android:installLocation="preferExternal"
+    android:installLocation="auto"
     android:versionCode="1"
     android:versionName="1.0" >
     <!-- OpenGL ES 1.1 -->
