--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,6 @@
 [submodule "libs"]
 	path = libs
-	url = https://github.com/Bonpournickel/etlegacy-libs.git
+	url = /var/scm/etlegacy-libs
+#   url = https://github.com/Bonpournickel/etlegacy-libs.git
 	branch = master
 	ignore = dirty
