--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ android:
   - tools
   - platform-tools
   - android-26
+  - system-images;android-28;google_ndk;x86
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
@@ -31,4 +32,12 @@ before_script:
 before_install:
   - echo y | sdkmanager "cmake;3.10.2.4988404"
 script:
-  - ./gradlew assembleDebug
+  - ./gradlew assembleDebugAndroidTest
+after_script:
+  # Emulator Management: Create, Start and Wait
+  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  # now run the tests
+  - ./gradlew connectedAndroidTest
