travis: get list of supported devices

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ script:
   - ./gradlew assembleDebugAndroidTest
 after_script:
   # Emulator Management: Create, Start and Wait
+  - android list targets
   - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
