--- a/.travis.yml
+++ b/.travis.yml
@@ -32,11 +32,11 @@ before_install:
   - echo y | sdkmanager "cmake;3.10.2.4988404"
   - echo y | sdkmanager "system-images;android-28;google_ndk;x86"
 script:
-  - ./gradlew assembleDebugAndroidTest
+  - ./gradlew assembleDebug
 after_script:
   # Emulator Management: Create, Start and Wait
   - android list targets
-  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-28 --abi arm64-v8a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
