--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
 after_script:
   # Emulator Management: Create, Start and Wait
   - android list targets
-  - echo no | android create avd --force -n test -t android-28 --abi arm64-v8a
+  - echo no | android create avd --force -n test -t android-28
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
