--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
 before_install:
   - echo y | sdkmanager "cmake;3.10.2.4988404"
-  - sdkmanager --install "system-images;android-28;google_ndk;x86"
+  - sdkmanager "system-images;android-28;google_ndk;x86"
 script:
   - ./gradlew assembleDebugAndroidTest
 after_script:
