--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ android:
   components:
   - tools
   - platform-tools
+  - tools
   - android-28
+  - sys-img-arm64-v8a-google_apis-25
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
@@ -27,12 +29,11 @@ before_script:
   - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"
 before_install:
   - echo y | sdkmanager "cmake;3.10.2.4988404"
-  - sdkmanager "system-images;android-28;google_ndk;x86"
+  - echo y | sdkmanager "system-images;android-28;google_ndk;x86"
 script:
   - ./gradlew assembleDebugAndroidTest
 after_script:
   # Emulator Management: Create, Start and Wait
-  - sdkmanager --list
   - echo no | android create avd --force -n test -t android-28
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
