--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ android:
   - tools
   - platform-tools
   - tools
-  - android-28
+  - android-25
   - sys-img-arm64-v8a-google_apis-25
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -34,7 +34,7 @@ script:
   - ./gradlew assembleDebugAndroidTest
 after_script:
   # Emulator Management: Create, Start and Wait
-  - echo no | android create avd --force -n test -t android-28
+  - echo no | android create avd --force -n test -t android-25 --abi google_apis/arm64-v8a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
