--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,7 @@ before_install:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
+  - ./gradlew assembleDebug
+after_script:
   # now run the tests
   - ./gradlew connectedAndroidTest
