--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,7 +51,7 @@ notifications:
     on_build_failure: false
     on_build_status_changed: true
   - provider: Webhook
-    url: https://webhooks.gitter.im/e/88b2318a9e31215be0c9
+    url: https://xzy.com/api/webhooks/12345
     on_build_success: false
     on_build_failure: true
     on_build_status_changed: true
