--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,4 @@ jobs:
 
     - name: Build
       shell: bash
-      working-directory: ${{runner.workspace}}
-      run: easybuild.sh build
+      run: ./easybuild.sh build
