--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         shell: bash
-        run: ./easybuild.sh mod -64 --osx=10.15
+        run: ./easybuild.sh build -64 --osx=10.15
   win:
     runs-on: windows-2019
     steps:
