--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,18 @@ jobs:
     - name: Build
       shell: bash
       run: ./easybuild.sh build -64
+
   osx:
     runs-on: macos-10.15
     steps:
       - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: brew bundle
+
       - name: Build
         shell: bash
         run: ./easybuild.sh build -64 --osx=10.15
+
   win:
     runs-on: windows-2019
     steps:
@@ -29,3 +34,4 @@ jobs:
       - name: Build
         shell: cmd
         run: call .\easybuild.bat build
+
