osx build changes

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ win_resource.aps
 # Do not under any circumstances ignore these
 !/easybuild.sh
 !/easybuild.bat
+
+node_modules/
+package.json
+package-lock.json
