--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,15 +17,17 @@ jobs:
       run: ./easybuild.sh build -64
 
   osx:
-    runs-on: macos-10.15
+    runs-on: macos-10.14
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: brew bundle
 
       - name: Build
+        env:
+          DEVELOPER_DIR: /Applications/Xcode_11.2.app/Contents/Developer
         shell: bash
-        run: ./easybuild.sh build -64 --osx=10.15
+        run: ./easybuild.sh build -64 --osx=10.14
 
   win:
     runs-on: windows-2019
